# hotdog_tutorial

./: .gitignore  Cargo.toml  README.md
.github/workflows/: android.yml
src/: backend.rs  guide_router.rs  main.rs
src/components/: favorites.rs  mod.rs  nav.rs
